--- a/css/loader.css
+++ b/css/loader.css
@@ -1,32 +1,32 @@
 /* @import url('https://fonts.googleapis.com/css?family=Nunito+Sans+800'); */
-body {
+loaderloaderloader.body {
   align-items: center;
   display: flex;
   flex-direction: column;
-  font-family: 'Ubuntu', sans-serif;
+  /* font-family: 'Ubuntu', sans-serif; */
   font-size: 1.5em;
   font-weight: bold;
   height: 100vh;
   justify-content: center;
   margin: 0;
 }
-svg {
+loaderloaderloader.svg {
   height: 200px;
   stroke-width:4;
 }
-.pig {
+loaderloaderloader.pig {
   stroke-dasharray: 319 319;
   stroke-dashoffset: 0px;
 }
-.calculator {
+loaderloaderloader.calculator {
   stroke-dasharray: 0 252;
   stroke-dashoffset: 0px;
 }
-.wallet {
+loaderloaderloader.wallet {
   stroke-dasharray: 0 240;
   stroke-dashoffset: 0px;
 }
-.loading {
+loaderloaderloader.loading {
   margin-bottom: 30px;
   text-align: center;
   width: 200px;
